<resources>
    <string name="app_name">Vortex_App</string>

    // Mainscreen
    <string name="mainscreen_button_entrant">Entrant</string>
    <string name="mainscreen_button_organizer">Organizer</string>
    <string name="mainscreen_button_admin">Admin</string>
    <string name="centers">Centers</string>
    <string name="event_name">Event Name</string>
    <string name="events">Events</string>
    <string name="center_name">center name</string>
    <string name="center_item_name">Center Name</string>
    <string name="address">Address</string>
    <string name="_123_main_st">123 Main St</string>
    <string name="button_join_waiting_list">Join the Waiting List</string>

    <string name="notification_details">Notification Details</string>

    <string name="information">Information</string>
    <string name="waiting_list">Waiting List</string>
    <string name="qr_code">QR code</string>
    <string name="selected_list">Selected List</string>
    <string name="media">Media</string>
    <string name="cancellation_list">Cancellation List</string>
    <string name="location">Location</string>
    <string name="final_list">Final List</string>
    <string name="event_id">EVENT_ID</string>
    <string name="notification_icon">notification\n</string>
    <string-array name="yes_no_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="Week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


</resources>