<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back"
        android:contentDescription="Go Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- CardView for White Box Background -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewBack"
        app:layout_constraintBottom_toTopOf="@id/fab_notification">

        <!-- LinearLayout to Arrange Buttons Vertically -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:id="@+id/text_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="Event Name"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/darker_gray" />

            <!-- Buttons -->
            <Button
                android:id="@+id/button_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:text="@string/information"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_waiting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:text="@string/waiting_list"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_Qrcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:text="@string/qr_code"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:text="@string/selected_list"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_cancellation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:text="@string/cancellation_list"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:text="@string/location"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_final"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/final_list"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/notification_icon"
        app:srcCompat="@drawable/ic_notifications"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
