<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="What is your role?"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_mainscreen_entrant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_mainscreen_entrant"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="272dp"
        android:backgroundTint="#F8F8F8"
        android:text="@string/mainscreen_button_entrant"
        android:textColor="#3A3A3A"
        android:textSize="24sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_mainscreen_organizer"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#F8F8F8"
        android:text="@string/mainscreen_button_organizer"
        android:textColor="#3A3A3A"
        android:textSize="24sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mainscreen_entrant" />

    <Button
        android:id="@+id/button_mainscreen_admin"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#F8F8F8"
        android:text="@string/mainscreen_button_admin"
        android:textColor="#3A3A3A"
        android:textSize="24sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mainscreen_organizer" />

</androidx.constraintlayout.widget.ConstraintLayout>